add a router for each page in addition to linking all the pages and adding the public folder path to server.js so that the pages are displayed with css and images

--- a/view/single-audio.ejs
+++ b/view/single-audio.ejs
@@ -16,14 +16,14 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="../public/css/base.css">
-    <link rel="stylesheet" href="../public/css/vendor.css">
-    <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- script
     ================================================== -->
-    <script src="../public/js/modernizr.js"></script>
-    <script src="../public/js/pace.min.js"></script>
+    <script src="/js/modernizr.js"></script>
+    <script src="/js/pace.min.js"></script>
 
     <!-- favicons
     ================================================== -->
@@ -42,8 +42,8 @@
             <div class="header__content row">
 
                 <div class="header__logo">
-                    <a class="logo" href="index.html">
-                        <img src="../public/images/logo.svg" alt="Homepage">
+                    <a class="logo" href="/">
+                        <img src="/images/logo.svg" alt="Homepage">
                     </a>
                 </div> <!-- end header__logo -->
 
@@ -87,30 +87,30 @@
                     <h2 class="header__nav-heading h6">Site Navigation</h2>
 
                     <ul class="header__nav">
-                        <li><a href="index.html" title="">Home</a></li>
+                        <li><a href="/" title="">Home</a></li>
                         <li class="has-children">
                             <a href="#0" title="">Categories</a>
                             <ul class="sub-menu">
-                                <li><a href="category.html">Lifestyle</a></li>
-                                <li><a href="category.html">Health</a></li>
-                                <li><a href="category.html">Family</a></li>
-                                <li><a href="category.html">Management</a></li>
-                                <li><a href="category.html">Travel</a></li>
-                                <li><a href="category.html">Work</a></li>
+                                <li><a href="/category">Lifestyle</a></li>
+                                <li><a href="/category">Health</a></li>
+                                <li><a href="/category">Family</a></li>
+                                <li><a href="/category">Management</a></li>
+                                <li><a href="/category">Travel</a></li>
+                                <li><a href="/category">Work</a></li>
                             </ul>
                         </li>
                         <li class="has-children current">
                             <a href="#0" title="">Blog</a>
                             <ul class="sub-menu">
-                                <li><a href="single-video.html">Video Post</a></li>
-                                <li><a href="single-audio.html">Audio Post</a></li>
-                                <li><a href="single-gallery.html">Gallery Post</a></li>
-                                <li><a href="single-standard.html">Standard Post</a></li>
+                                <li><a href="/single-video">Video Post</a></li>
+                                <li><a href="/single-audio">Audio Post</a></li>
+                                <li><a href="/single-gallery">Gallery Post</a></li>
+                                <li><a href="/single-standard">Standard Post</a></li>
                             </ul>
                         </li>
-                        <li><a href="style-guide.html" title="">Styles</a></li>
-                        <li><a href="about.html" title="">About</a></li>
-                        <li><a href="contact.html" title="">Contact</a></li>
+                        <li><a href="/style-guide" title="">Styles</a></li>
+                        <li><a href="/about" title="">About</a></li>
+                        <li><a href="/contact" title="">Contact</a></li>
                     </ul> <!-- end header__nav -->
 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
@@ -145,9 +145,9 @@
 
             <div class="s-content__media col-full">
                 <div class="s-content__post-thumb">
-                    <img src="../public/images/thumbs/single/audio/audio-1000.jpg" srcset="../public/images/thumbs/single/audio/audio-2000.jpg 2000w, 
-                                ../public/images/thumbs/single/audio/audio-1000.jpg 1000w, 
-                                ../public/images/thumbs/single/audio/audio-500.jpg 500w"
+                    <img src="/images/thumbs/single/audio/audio-1000.jpg" srcset="/images/thumbs/single/audio/audio-2000.jpg 2000w, 
+                                /images/thumbs/single/audio/audio-1000.jpg 1000w, 
+                                /images/thumbs/single/audio/audio-500.jpg 500w"
                         sizes="(max-width: 2000px) 100vw, 2000px" alt="">
 
                     <div class="audio-wrap">
@@ -174,8 +174,8 @@
                 </p>
 
                 <p>
-                    <img src="../public/images/wheel-1000.jpg"
-                        srcset="../public/images/wheel-2000.jpg 2000w, ../public/images/wheel-1000.jpg 1000w, ../public/images/wheel-500.jpg 500w"
+                    <img src="/images/wheel-1000.jpg"
+                        srcset="/images/wheel-2000.jpg 2000w, /images/wheel-1000.jpg 1000w, /images/wheel-500.jpg 500w"
                         sizes="(max-width: 2000px) 100vw, 2000px" alt="">
                 </p>
 
@@ -252,7 +252,7 @@
                 </p> <!-- end s-content__tags -->
 
                 <div class="s-content__author">
-                    <img src="../public/images/avatars/user-03.jpg" alt="">
+                    <img src="/images/avatars/user-03.jpg" alt="">
 
                     <div class="s-content__author-about">
                         <h4 class="s-content__author-name">
@@ -310,8 +310,7 @@
                         <li class="depth-1 comment">
 
                             <div class="comment__avatar">
-                                <img width="50" height="50" class="avatar" src="../public/images/avatars/user-01.jpg"
-                                    alt="">
+                                <img width="50" height="50" class="avatar" src="/images/avatars/user-01.jpg" alt="">
                             </div>
 
                             <div class="comment__content">
@@ -339,8 +338,7 @@
                         <li class="thread-alt depth-1 comment">
 
                             <div class="comment__avatar">
-                                <img width="50" height="50" class="avatar" src="../public/images/avatars/user-04.jpg"
-                                    alt="">
+                                <img width="50" height="50" class="avatar" src="/images/avatars/user-04.jpg" alt="">
                             </div>
 
                             <div class="comment__content">
@@ -369,8 +367,8 @@
                                 <li class="depth-2 comment">
 
                                     <div class="comment__avatar">
-                                        <img width="50" height="50" class="avatar"
-                                            src="../public/images/avatars/user-03.jpg" alt="">
+                                        <img width="50" height="50" class="avatar" src="/images/avatars/user-03.jpg"
+                                            alt="">
                                     </div>
 
                                     <div class="comment__content">
@@ -399,7 +397,7 @@
 
                                             <div class="comment__avatar">
                                                 <img width="50" height="50" class="avatar"
-                                                    src="../public/images/avatars/user-04.jpg" alt="">
+                                                    src="/images/avatars/user-04.jpg" alt="">
                                             </div>
 
                                             <div class="comment__content">
@@ -435,8 +433,7 @@
                         <li class="depth-1 comment">
 
                             <div class="comment__avatar">
-                                <img width="50" height="50" class="avatar" src="../public/images/avatars/user-02.jpg"
-                                    alt="">
+                                <img width="50" height="50" class="avatar" src="/images/avatars/user-02.jpg" alt="">
                             </div>
 
                             <div class="comment__content">
@@ -518,7 +515,7 @@
                 <div class="block-1-2 block-m-full popular__posts">
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/wheel-150.jpg" alt="">
+                            <img src="/images/thumbs/small/wheel-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Visiting Theme Parks Improves Your Health.</a></h5>
                         <section class="popular__meta">
@@ -529,7 +526,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/shutterbug-150.jpg" alt="">
+                            <img src="/images/thumbs/small/shutterbug-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Key Benefits Of Family Photography.</a></h5>
                         <section class="popular__meta">
@@ -540,7 +537,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/cookies-150.jpg" alt="">
+                            <img src="/images/thumbs/small/cookies-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Absolutely No Sugar Oatmeal Cookies.</a></h5>
                         <section class="popular__meta">
@@ -551,7 +548,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/beetle-150.jpg" alt="">
+                            <img src="/images/thumbs/small/beetle-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Throwback To The Good Old Days.</a></h5>
                         <section class="popular__meta">
@@ -562,7 +559,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/tulips-150.jpg" alt="">
+                            <img src="/images/thumbs/small/tulips-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">10 Interesting Facts About Caffeine.</a></h5>
                         <section class="popular__meta">
@@ -573,7 +570,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/salad-150.jpg" alt="">
+                            <img src="/images/thumbs/small/salad-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Healthy Mediterranean Salad Recipes</a></h5>
                         <section class="popular__meta">
@@ -749,9 +746,9 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="../public/js/jquery-3.2.1.min.js"></script>
-    <script src="../public/js/plugins.js"></script>
-    <script src="../public/js/main.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
