--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -16,14 +16,14 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="../public/css/base.css">
-    <link rel="stylesheet" href="../public/css/vendor.css">
-    <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- script
     ================================================== -->
-    <script src="../public/js/modernizr.js"></script>
-    <script src="../public/js/pace.min.js"></script>
+    <script src="/js/modernizr.js"></script>
+    <script src="/js/pace.min.js"></script>
 
     <!-- favicons
     ================================================== -->
@@ -42,8 +42,8 @@
             <div class="header__content row">
 
                 <div class="header__logo">
-                    <a class="logo" href="index.html">
-                        <img src="../public/images/logo.svg" alt="Homepage">
+                    <a class="logo" href="/">
+                        <img src="/images/logo.svg" alt="Homepage">
                     </a>
                 </div> <!-- end header__logo -->
 
@@ -87,30 +87,30 @@
                     <h2 class="header__nav-heading h6">Site Navigation</h2>
 
                     <ul class="header__nav">
-                        <li><a href="index.html" title="">Home</a></li>
+                        <li><a href="/" title="">Home</a></li>
                         <li class="has-children">
                             <a href="#0" title="">Categories</a>
                             <ul class="sub-menu">
-                                <li><a href="category.html">Lifestyle</a></li>
-                                <li><a href="category.html">Health</a></li>
-                                <li><a href="category.html">Family</a></li>
-                                <li><a href="category.html">Management</a></li>
-                                <li><a href="category.html">Travel</a></li>
-                                <li><a href="category.html">Work</a></li>
+                                <li><a href="/category">Lifestyle</a></li>
+                                <li><a href="/category">Health</a></li>
+                                <li><a href="/category">Family</a></li>
+                                <li><a href="/category">Management</a></li>
+                                <li><a href="/category">Travel</a></li>
+                                <li><a href="/category">Work</a></li>
                             </ul>
                         </li>
                         <li class="has-children">
                             <a href="#0" title="">Blog</a>
                             <ul class="sub-menu">
-                                <li><a href="single-video.html">Video Post</a></li>
-                                <li><a href="single-audio.html">Audio Post</a></li>
-                                <li><a href="single-gallery.html">Gallery Post</a></li>
-                                <li><a href="single-standard.html">Standard Post</a></li>
+                                <li><a href="/single-video">Video Post</a></li>
+                                <li><a href="/single-audio">Audio Post</a></li>
+                                <li><a href="/single-gallery">Gallery Post</a></li>
+                                <li><a href="/single-standard">Standard Post</a></li>
                             </ul>
                         </li>
-                        <li><a href="style-guide.html" title="">Styles</a></li>
-                        <li><a href="about.html" title="">About</a></li>
-                        <li class="current"><a href="contact.html" title="">Contact</a></li>
+                        <li><a href="/style-guide" title="">Styles</a></li>
+                        <li><a href="/about" title="">About</a></li>
+                        <li class="current"><a href="/contact" title="">Contact</a></li>
                     </ul> <!-- end header__nav -->
 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
@@ -231,7 +231,7 @@
                 <div class="block-1-2 block-m-full popular__posts">
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/wheel-150.jpg" alt="">
+                            <img src="/images/thumbs/small/wheel-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Visiting Theme Parks Improves Your Health.</a></h5>
                         <section class="popular__meta">
@@ -242,7 +242,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/shutterbug-150.jpg" alt="">
+                            <img src="/images/thumbs/small/shutterbug-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Key Benefits Of Family Photography.</a></h5>
                         <section class="popular__meta">
@@ -253,7 +253,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/cookies-150.jpg" alt="">
+                            <img src="/images/thumbs/small/cookies-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Absolutely No Sugar Oatmeal Cookies.</a></h5>
                         <section class="popular__meta">
@@ -264,7 +264,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/beetle-150.jpg" alt="">
+                            <img src="/images/thumbs/small/beetle-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Throwback To The Good Old Days.</a></h5>
                         <section class="popular__meta">
@@ -275,7 +275,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/tulips-150.jpg" alt="">
+                            <img src="/images/thumbs/small/tulips-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">10 Interesting Facts About Caffeine.</a></h5>
                         <section class="popular__meta">
@@ -286,7 +286,7 @@
                     </article>
                     <article class="col-block popular__post">
                         <a href="#0" class="popular__thumb">
-                            <img src="../public/images/thumbs/small/salad-150.jpg" alt="">
+                            <img src="/images/thumbs/small/salad-150.jpg" alt="">
                         </a>
                         <h5><a href="#0">Healthy Mediterranean Salad Recipes</a></h5>
                         <section class="popular__meta">
@@ -462,10 +462,10 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="../public/js/jquery-3.2.1.min.js"></script>
-    <script src="../public/js/plugins.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/plugins.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="../public/js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
