--- a/view/Design.ejs
+++ b/view/Design.ejs
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Category - Philosophy</title>
+    <title>Video Post Format - Philosophy</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -87,30 +87,17 @@
                     <h2 class="header__nav-heading h6">Site Navigation</h2>
 
                     <ul class="header__nav">
-                        <li><a href="/" title="">Home</a></li>
-                        <li class="has-children current">
-                            <a href="#0" title="">Categories</a>
-                            <ul class="sub-menu">
-                                <li><a href="/category">Lifestyle</a></li>
-                                <li><a href="/category">Health</a></li>
-                                <li><a href="/category">Family</a></li>
-                                <li><a href="/category">Management</a></li>
-                                <li><a href="/category">Travel</a></li>
-                                <li><a href="/category">Work</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="/Design" title="">Design</a></li>
+                        <li><a href="/Developpement" title="">Developpement</a></li>
+                        <li><a href="/Marketing" title="">Marketing</a></li>
+                        <li><a href="/Music" title="">Music</a></li>
                         <li class="has-children">
-                            <a href="#0" title="">Blog</a>
+                            <a href="#0" title="">More</a>
                             <ul class="sub-menu">
-                                <li><a href="/single-video">Video Post</a></li>
-                                <li><a href="/single-audio">Audio Post</a></li>
-                                <li><a href="/single-gallery">Gallery Post</a></li>
-                                <li><a href="/single-standard">Standard Post</a></li>
+                                <li><a href="/Photography">Photography</li>
+                                <li><a href="/Business">Business</a></li>
                             </ul>
                         </li>
-                        <li><a href="/style-guide" title="">Styles</a></li>
-                        <li><a href="/about" title="">About</a></li>
-                        <li><a href="/contact" title="">Contact</a></li>
                     </ul> <!-- end header__nav -->
 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
@@ -618,130 +605,23 @@
     ================================================== -->
     <section class="s-extra">
 
-        <div class="row top">
-
-            <div class="col-eight md-six tab-full popular">
-                <h3>Popular Posts</h3>
-
-                <div class="block-1-2 block-m-full popular__posts">
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/wheel-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">Visiting Theme Parks Improves Your Health.</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-19">Dec 19,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/shutterbug-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">Key Benefits Of Family Photography.</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-18">Dec 18,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/cookies-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">Absolutely No Sugar Oatmeal Cookies.</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-16">Dec 16,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/beetle-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">Throwback To The Good Old Days.</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-16">Dec 16,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/tulips-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">10 Interesting Facts About Caffeine.</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-14">Dec 14,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                    <article class="col-block popular__post">
-                        <a href="#0" class="popular__thumb">
-                            <img src="/images/thumbs/small/salad-150.jpg" alt="">
-                        </a>
-                        <h5><a href="#0">Healthy Mediterranean Salad Recipes</a></h5>
-                        <section class="popular__meta">
-                            <span class="popular__author"><span>By</span> <a href="#0"> John Doe</a></span>
-                            <span class="popular__date"><span>on</span> <time datetime="2017-12-12">Dec 12,
-                                    2017</time></span>
-                        </section>
-                    </article>
-                </div> <!-- end popular_posts -->
-            </div> <!-- end popular -->
-
-            <div class="col-four md-six tab-full about">
-                <h3>About Philosophy</h3>
-
-                <p>
-                    Donec sollicitudin molestie malesuada. Nulla quis lorem ut libero malesuada feugiat. Pellentesque in
-                    ipsum id orci porta dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                    posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                    Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada.
-                </p>
-
-                <ul class="about__social">
-                    <li>
-                        <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                    </li>
-                </ul> <!-- end header__social -->
-            </div> <!-- end about -->
-
-        </div> <!-- end row -->
-
         <div class="row bottom tags-wrap">
             <div class="col-full tags">
                 <h3>Tags</h3>
 
                 <div class="tagcloud">
-                    <a href="#0">Salad</a>
-                    <a href="#0">Recipe</a>
-                    <a href="#0">Places</a>
-                    <a href="#0">Tips</a>
-                    <a href="#0">Friends</a>
-                    <a href="#0">Travel</a>
-                    <a href="#0">Exercise</a>
-                    <a href="#0">Reading</a>
-                    <a href="#0">Running</a>
-                    <a href="#0">Self-Help</a>
-                    <a href="#0">Vacation</a>
+                    <a href="/Design">Design</a>
+                    <a href="/Developpement">Developpement</a>
+                    <a href="/Marketing">Marketing</a>
+                    <a href="/Music">Music</a>
+                    <a href="/Photography">Photography</a>
+                    <a href="/Business">Business</a>
                 </div> <!-- end tagcloud -->
             </div> <!-- end tags -->
         </div> <!-- end tags-wrap -->
 
     </section> <!-- end s-extra -->
+
 
 
     <!-- s-footer
