--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -279,7 +279,7 @@
                   Total categorie
                 </p>
                 <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  6389
+                  <%= data %>
                 </p>
               </div>
             </div>
