--- a/view/index.ejs
+++ b/view/index.ejs
@@ -90,7 +90,7 @@
 
 
 
-                        <li><a href="/articles_interface" title="">Design</a></li>
+                        <li><a href="/design" title="">Design</a></li>
                         <li><a href="/Developpement" title="">Developpement</a></li>
                         <li><a href="/Marketing" title="">Marketing</a></li>
                         <li><a href="/Music" title="">Music</a></li>
@@ -232,7 +232,7 @@
                         </div>
                         <div class="entry__meta">
                             <span class="entry__meta-links">
-                                <a href="/category">Design</a>
+                                <a href="/category/:id">Design</a>
                                 <a href="/category">Photography</a>
                             </span>
                         </div>
